Moon page is still unfinished

--- a/pages/moon.html
+++ b/pages/moon.html
@@ -196,12 +196,64 @@
                 </p>
                 <h2 class="paragraphheader" id="EarlyObservations">Early observations</h2>
                 <p class="paragraph">
+                    The Moon is known since ancient times.
+                    It's regular phases were used for the making of many calendars.
+                    The Moon was categorised as a planet until Galileo Galilei's discovery of the four natural <a href="natural-satellite.html">satellites</a> of <a href="jupiter.html">Jupiter</a>.
+                    He still was unsure what to call them, as they were the first object other than the Moon to orbit planets instead of the Sun.
+                    It took several years for the word satellite to be used.
+                    Natural satellites are also called moons after the Moon.
+                    Galileo made observations of the Moon with his telescope and discovered landforms on its surface.
+                    Multiple people produced maps of the Moon, displaying its "maria" and craters.
                 </p>
                 <h2 class="paragraphheader" id="Exploration">Exploration</h2>
+                <h3 class="paragraphsubheader" id="LunaProgram">Luna program</h3>
                 <p class="paragraph">
+                    After the beginning of the Cold War, the Soviet Union began the development of rockets, known as launch systems, to launch objects outside the <a href="earth.html">Earth</a>.
+                    The launch of Sputnik 1, the first artificial satellite, marked the beginning of the Space Race between the USa and the USSR.
+                    One of the objectives of the race was to send people to the Moon, as it is the closest celestial object to the Earth.
+                    The Soviet Union began it's Luna program.
+                    Luna 1 was the first spacecraft to reach the Moon and Luna 2 was the fist to impact the surface.
+                    Luna 3 was the first to fly by the far side, making the first photographs of it.
+                    Luna 9 made the first soft landing and Luna 10 followed with the first orbit around the Moon.
+                    After the USA's successful Apollo 11 crewed mission to the Moon, the Luna program continued - Luna 16 made a sample return and Luna 17 brought the first rover - Lunokhod 1.
+                </p>
+                <p class="paragraph">
+                    The Soviet Union also had other Lunar programs apart from Luna.
+                    The Zond program was an attempt at conducting crewed flights to the moon.
+                    Zond 5 sent the first lifeforms to the Moon (without landing) and returned safely to the Earth - two tortoises and other animals and plants intended for feeding the tortoises.
+                    The Soviet Union also had plans for sending people, but never did.
                 </p>
                 <h3 class="paragraphsubheader" id="ApolloProgram">Apollo program</h3>
                 <p class="paragraph">
+                    The USA joined the race, but was behind the USSR, which already accomplished many milestones, including first man in space.
+                    Many uncrewed missions were conducted under the Pioneer program, but none successful with the exception of a partial success of Pioneer 4.
+                    Following the Pioneer program was the Ranger program, with Ranger 4 being the first American mission to impact the Moon.
+                </p>
+                <p class="paragraph">
+                    During the development of the uncrewed missions, a program aimed at sending the first people to the Moon started.
+                    The Apollo Mission was president John Kennedy's suggestion for a crewed mission to the surface of the Moon by the end of the 60s.
+                    In 1967, Apollo 1 caught fire before launching, resulting in the death of all three crew members.
+                    After the tragedy, several uncrewed tests were conducted before returning to crewed flights.
+                    Apollo 7 was a successful validation of the rocket systems.
+                    Apollo 8 was the first to send people to the Moon, orbiting around the Moon ten times.
+                    Apollo 9 tested rendezvous and docking in Earth orbit, while Apollo 10 made an uncrewed landing of the Lunar module on the Moon.
+                </p>
+                <p class="paragraph">
+                    In 1969, Neil Armstrong, Edwin "Buzz" Aldrin and Michael Collins were travelling to the Moon on the Apollo 11 mission.
+                    While in Lunar orbit, Armstrong and Aldrin moved into the Lunar lander "Eagle", while Collins stayed in the command module "Columbia".
+                    Finally, on 20 July 1969 Eagle landed on the surface on the Moon in Mare Tranquillitatis.
+                    Six and a half hours later Neil Armstrong and Buzz Aldrin set foot on the Moon and were the first to do so.
+                    While doing so Armstrong said the famous words: "That's one small step for a man, one giant leap for mankind."
+                    The tasks they were doing were walking on the surface, taking photographs, collecting samples, deploying scientific instruments and continuously broadcasting back to Earth.
+                    The three astronauts returned safely on July 24.
+                </p>
+                <p class="paragraph">
+                    Apollo 12 was the second crewed landing mission, landing near the Surveyor 3 lander.
+                    Apollo 13 was meant to be the third landing mission, but due to a failure in an oxygen tank, the crew members returned without landing.
+                    The Apollo 13 mission was reassigned to Apollo 14, which succeeded.
+                    Three more Apollo missions sent people on the surface.
+                    These missions were extended and the first time a crewed rover was used.
+                    No people have been to the Moon since then.
                 </p>
                 <h3 class="paragraphsubheader" id="ArtemisProgram">Artemis program</h3>
                 <p class="paragraph">
