Dwarf planet page

--- a/pages/asteroid-belt.html
+++ b/pages/asteroid-belt.html
@@ -153,7 +153,7 @@
                     <h3 class="paragraphsubheader" id="Ceres">Ceres</h3>
                     <p class="paragraph">
                         Ceres is the first asteroid to be discovered. 
-                        It is the biggest of the asteroids in the asteroid belt and is the only such one to be a dwarf planet. 
+                        It is the biggest of the asteroids in the asteroid belt and is the only such one to be a <a href="dwarf-planet.html">dwarf planet</a>. 
                         It is named after the Roman goddess of agriculture and fertility. 
                         The surface of the asteroid consists of ice and carbonates. 
                         Cryovolcanism activity shapes the surface of the dwarf planet, thanks to which many bright spots in craters and a single mountain (Ahuna Mons) exist.
