--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -116,7 +116,7 @@
                 </p>
                 <p class="paragraph">
                     Six of the eight planets in the Solar System have at least one satellite. 
-                    Many of the known dwarf planets also have satellites, as well as some asteroids.
+                    Many of the known <a href="dwarf-planet.html">dwarf planets</a> also have satellites, as well as some asteroids.
                 </p>
                 <h2 class="paragraphheader" id="HistoryAndDefiningSatellites">History and defining satellites</h2>
                 <p class="paragraph">
@@ -280,7 +280,7 @@
                     <h3 class="paragraphsubheader" id="SatellitesOfNeptune">Satellites of Neptune</h3>
                     <p class="paragraph">
                         There are 14 known <a href="neptune.html">Neptunian</a> satellites, named after Greek water deities. 
-                        The biggest satellite - Triton, is believed to be a dwarf planet caught by the gravitation of Neptune.
+                        The biggest satellite - Triton, is believed to be a <a href="dwarf-planet.html">dwarf planet</a> caught by the gravity of Neptune.
                     </p>
                     <p class="paragraph">
                         The biggest non-planetary satellite in the Solar System is Proteus, which orbits Neptune.
@@ -298,7 +298,7 @@
                         The biggest moon - Charon, named after the ferryman of the underworld, is so big compared to Pluto, that the barycenter of Pluto lies outside of it and both objects are tidally locked to each other.
                     </p>
                     <p class="paragraph">Eris has one moon - Dysnomia, named after the daemon of lawlessness in Greek mythology.</p>
-                    <p class="paragraph">Haumea has two satellites - Hi'iaka and Namaka, both named after Hawaiian deities.</p>
+                    <p class="paragraph">Haumea has two satellites - Hiʻiaka and Namaka, both named after Hawaiian deities.</p>
                     <p class="paragraph">Makemake has one satellite, refered to as MK2.</p>
                     <p class="paragraph">
                         Other dwarf planets with satellites include Gonggong with Xiangliu, Quaoar with Weywot and Orcus with Vanth.
