--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -176,7 +176,7 @@
                     Part of those objects that have a low eccentricity make up the Kuiper belt.
                     Kuiper belt objects are further split into classical (cubewanos) and resonant.
                     The resonant KBOs are in a resonance with Neptune - 1:2 (twotinos), 2:3 (plutinos), 3:4, 3:5, 4:7 or 2:5.
-                    Pluto, the largest dwarf planet, is a plutino and because of it's resonance with Neptune, it would not collide despite crossing the Neptunian orbit.
+                    Pluto, the largest <a href="dwarf-planet.html">dwarf planet</a>, is a plutino and because of it's resonance with Neptune, it would not collide despite crossing the Neptunian orbit.
                 </p>
                 <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
                 <h3 class="paragraphsubheader" id="Size">Size</h3>
@@ -235,7 +235,8 @@
                     <p class="paragraph">
                         There are 14 known <a href="neptune.html">Neptunian</a> satellites, all named after Greek water deities. 
                         The biggest satellite - Triton was discovered just 17 years after the discovery of Neptune. 
-                        It is believed to be a dwarf planet caught by the gravitation of Neptune, because of it's retrograde orbit. 
+                        It is believed to be a <a href="dwarf-planet.html">dwarf planet</a> caught by the gravity of Neptune, because of it's retrograde orbit. 
+                        Triton is similar to other moons like Ganymede, Europa and Enceladus in that a subsurface ocean might exist under the surface.
                     </p>
                     <p class="paragraph">
                         All of the other satellites have an irregular shape.
