--- a/pages/planet.html
+++ b/pages/planet.html
@@ -133,7 +133,7 @@
                 </p>
                 <p class="paragraph">
                     The same can be said for the asteroids in the <a href="asteroid-belt.html">Asteroid Belt</a>, or objects like Pluto. 
-                    The biggest asteroid - Ceres, the <a href="tno.html">Trans-Neptunian objects</a> Pluto, Eris, Haumea, Makemake and many more are called dwarf planets. 
+                    The biggest asteroid - Ceres, the <a href="tno.html">Trans-Neptunian objects</a> Pluto, Eris, Haumea, Makemake and many more are called <a href="dwarf-planet.html">dwarf planets</a>. 
                     The difference is that unlike regular planets, dwarf planets do not make up the majority of the mass in their orbit.
                 </p>
                 <p class="paragraph">
@@ -282,7 +282,7 @@
                         It is named after the Roman sea god. 
                         It has a ring system and had a Great Dark Spot, similar to the Great Red Spot of Jupiter. 
                         There are 14 known satellites, named after Greek water deities. 
-                        The biggest satellite - Triton, is believed to be a dwarf planet caught by the gravitation of Neptune.
+                        The biggest satellite - Triton, is believed to be a <a href="dwarf-planet.html">dwarf planet</a> caught by the gravity of Neptune.
                     </p>
                 </div>
                 <div class="articlediv">
@@ -291,6 +291,7 @@
                         <img class="articleimage" src="../assets/images/tnos/pluto.jpg" alt="Pluto" width="180" height="180">
                         <p class="caption">Pluto is regarded as a dwarf planet.</p>
                     </div>
+                    <p class="readmore">Main article: <a href="dwarf-planet.html">Dwarf planet</a></p>
                     <p class="paragraph">
                         Dwarf planets are objects similar to planets. 
                         The difference is that unlike regular planets, dwarf planets do not make up the majority of the mass in their orbit apart from their satellites.
