--- a/pages/tno.html
+++ b/pages/tno.html
@@ -123,7 +123,7 @@
                 </p>
                 <p class="paragraph">
                     More TNOs were found - Varuna, Ixion, Quaoar, Sedna and Haumea. 
-                    With the discovery of Eris, the most massive TNO, the International Astronomical Union announced in 2006 that objects like Pluto and Eris would be classified as dwarf planets - a new class of objects.
+                    With the discovery of Eris, the most massive TNO, the International Astronomical Union announced in 2006 that objects like Pluto and Eris would be classified as <a href="dwarf-planet.html">dwarf planets</a> - a new class of objects.
                 </p>
                 <h2 class="paragraphheader" id="Classification">Classification</h2>
                 <div class="articlediv">
@@ -161,7 +161,7 @@
                     </div>
                     <h3 class="paragraphsubheader" id="Pluto">Pluto</h3>
                     <p class="paragraph">
-                        Pluto is the biggest TNO and dwarf planet in the Solar System. 
+                        Pluto is the biggest TNO and <a href="dwarf-planet.html">dwarf planet</a> in the Solar System. 
                         It is named after the Greek god of the underworld, also known as Hades. 
                         Pluto has five <a href="natural-satellite.html">satellites</a>. 
                         The biggest moon - Charon, named after the ferryman of Hades, is so big compared to Pluto, that the barycenter of Pluto lies outside of it and both objects are tidally locked to each other.
