--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="assets/style.css">
         <link rel="icon" type="image/x-icon" href="assets/favicon.png">
-        <title>Gabrova</title>
+        <title>News - Gabrova</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <meta name="description" content="Geography of the planets">
@@ -60,30 +60,20 @@
         <aside class="asideleft">
             <h2 class="asidetitle">Home</h2>
             <ul class="toc">
-                <li>
-                    <a href="#Welcome">Welcome</a>
-                </li>
-                <li>
-                    <a href="#WhatDoesGabrovaMean">What does Gabrova mean?</a>
-                </li>
+                <!--<li>
+                    <a href="#"></a>
+                </li>-->
             </ul>
         </aside>
 
         <!--Title on the main page-->
 
         <div class="maincolumn">
-            <h1 class="bigpageheader">Gabrova</h1>
-            <h2 class="smallpageheader">Astronomy and geography of the planets</h2>
+            <h1 class="bigpageheader">News</h1>
          
             <!--The main page article-->
          
             <section class="maincontent">
-                <h2 class="paragraphheader" id="Welcome">Welcome</h2>
-                <p class="paragraph">Gabrova is the place for learning about objects in Space, as well as their geography.</p>
-                <p class="paragraph">Here you can learn about planets, moons and minor planets of the Solar System and other systems.</p>
-                <h2 class="paragraphheader" id="WhatDoesGabrovaMean">What does Gabrova mean?</h2>
-                <p class="paragraph">2206 Gabrova is an asteroid located in the Asteroid Belt, discovered on April 1, 1976 by Russian astronomer Nikolai Chernykh at the Crimean Astrophysical Observatory.</p>
-                <p class="paragraph">Since it was discovered on April Fool's Day, the asteroid is named after the Bulgarian city of Gabrovo, known for its jokes and as the capital of humor and satire.</p>
             </section>
         </div>
 
