--- a/pages/dwarf-planet.html
+++ b/pages/dwarf-planet.html
@@ -47,10 +47,10 @@
                     </div>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">About</a>
+                    <a class="navlink" href="../about.html">About</a>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">News</a>
+                    <a class="navlink" href="../news.html">News</a>
                 </li>
             </ul>
         </nav>
@@ -397,7 +397,7 @@
                     It is named after the Roman goddess of salt water.
                     Salacia has a single moon Actaea.
                 </p>
-                <h4 id="ExternalLinks">External links</h4>
+                <h2 id="ExternalLinks">External links</h4>
                 <ul>
                     <li>
                         <a href="https://en.wikipedia.org/wiki/Dwarf_planet">https://en.wikipedia.org/wiki/Dwarf_planet</a>
