--- a/pages/earth.html
+++ b/pages/earth.html
@@ -47,10 +47,10 @@
                     </div>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">About</a>
+                    <a class="navlink" href="../about.html">About</a>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">News</a>
+                    <a class="navlink" href="../news.html">News</a>
                 </li>
             </ul>
         </nav>
@@ -323,7 +323,7 @@
                         The Artemis mission is a follow-up to Apollo, with the uncrewed Artemis 1 already ongoing.
                     </p>
                 </div>
-                <h4 id="ExternalLinks">External links</h4>
+                <h2 id="ExternalLinks">External links</h4>
                 <ul>
                     <li>
                         <a href="https://solarsystem.nasa.gov/planets/earth/overview/">https://solarsystem.nasa.gov/planets/earth/overview/</a>
