--- a/pages/exoplanet.html
+++ b/pages/exoplanet.html
@@ -47,10 +47,10 @@
                     </div>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">About</a>
+                    <a class="navlink" href="../about.html">About</a>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">News</a>
+                    <a class="navlink" href="../news.html">News</a>
                 </li>
             </ul>
         </nav>
@@ -197,7 +197,7 @@
                     If a planet is orbiting in the habitable zone of it's host <a href="star.html">star</a>, water could exist in all three states. 
                     Another metric is the size of a planet - planets with sizes similar to Earth are more likely to be similar in other aspects.
                 </p>
-                <h4 id="ExternalLinks">External links</h4>
+                <h2 id="ExternalLinks">External links</h4>
                 <ul>
                     <li>
                         <a href="https://exoplanets.nasa.gov">https://exoplanets.nasa.gov</a>
