--- a/pages/jupiter.html
+++ b/pages/jupiter.html
@@ -47,10 +47,10 @@
                     </div>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">About</a>
+                    <a class="navlink" href="../about.html">About</a>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">News</a>
+                    <a class="navlink" href="../news.html">News</a>
                 </li>
             </ul>
         </nav>
@@ -353,7 +353,7 @@
                         CNSA is preparing for launching Tianwen-4 in 2029 with the mission to study the Jovian magnetosphere and atmosphere, as well as Ganymede or Callisto.
                     </p>
                 </div>
-                <h4 id="ExternalLinks">External links</h4>
+                <h2 id="ExternalLinks">External links</h4>
                 <ul>
                     <li>
                         <a href="https://solarsystem.nasa.gov/planets/jupiter/overview/">https://solarsystem.nasa.gov/planets/jupiter/overview/</a>
