--- a/pages/mars.html
+++ b/pages/mars.html
@@ -47,10 +47,10 @@
                     </div>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">About</a>
+                    <a class="navlink" href="../about.html">About</a>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">News</a>
+                    <a class="navlink" href="../news.html">News</a>
                 </li>
             </ul>
         </nav>
@@ -329,7 +329,7 @@
                     NASA and CNSA both plan on sending people on Mars as early as the 2030s.
                     SpaceX, a privately held company, has proposed it's own missions to Mars with the intent of colonising and settling the <a href="planet.html">planet</a>.
                 </p>
-                <h4 id="ExternalLinks">External links</h4>
+                <h2 id="ExternalLinks">External links</h4>
                 <ul>
                     <li>
                         <a href="https://solarsystem.nasa.gov/planets/mars/overview/">https://solarsystem.nasa.gov/planets/mars/overview/</a>
