--- a/pages/mercury.html
+++ b/pages/mercury.html
@@ -47,10 +47,10 @@
                     </div>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">About</a>
+                    <a class="navlink" href="../about.html">About</a>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">News</a>
+                    <a class="navlink" href="../news.html">News</a>
                 </li>
             </ul>
         </nav>
@@ -193,7 +193,7 @@
                     It is planned to get into Mercury orbit in 2025.
                     Two probes will be released to study the planet.
                 </p>
-                <h4 id="ExternalLinks">External links</h4>
+                <h2 id="ExternalLinks">External links</h4>
                 <ul>
                     <li>
                         <a href="https://solarsystem.nasa.gov/planets/mercury/overview/">https://solarsystem.nasa.gov/planets/mercury/overview/</a>
