--- a/pages/moon.html
+++ b/pages/moon.html
@@ -47,10 +47,10 @@
                     </div>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">About</a>
+                    <a class="navlink" href="../about.html">About</a>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">News</a>
+                    <a class="navlink" href="../news.html">News</a>
                 </li>
             </ul>
         </nav>
@@ -350,7 +350,7 @@
                     The idea of spacefligh and people on the Moon became more popular.
                     Examples of media imagining travelling to the Moon include Jules Verne's novel "From the Earth to the Moon" and the 1902 movie "A Trip to the Moon". 
                 </p>
-                <h4 id="ExternalLinks">External links</h4>
+                <h2 id="ExternalLinks">External links</h4>
                 <ul>
                     <li>
                         <a href="https://solarsystem.nasa.gov/moons/earths-moon/overview/">https://solarsystem.nasa.gov/moons/earths-moon/overview/</a>
