--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -47,10 +47,10 @@
                     </div>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">About</a>
+                    <a class="navlink" href="../about.html">About</a>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">News</a>
+                    <a class="navlink" href="../news.html">News</a>
                 </li>
             </ul>
         </nav>
@@ -257,7 +257,7 @@
                    Since the visit, Voyager 2 has left the Solar System.
                    Multiple new missions were proposed, but none are yet approved.
                 </p>
-                <h4 id="ExternalLinks">External links</h4>
+                <h2 id="ExternalLinks">External links</h4>
                 <ul>
                     <li>
                         <a href="https://solarsystem.nasa.gov/planets/neptune/overview/">https://solarsystem.nasa.gov/planets/neptune/overview/</a>
