--- a/pages/planet.html
+++ b/pages/planet.html
@@ -47,10 +47,10 @@
                     </div>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">About</a>
+                    <a class="navlink" href="../about.html">About</a>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">News</a>
+                    <a class="navlink" href="../news.html">News</a>
                 </li>
             </ul>
         </nav>
@@ -313,7 +313,7 @@
                 <p class="paragraph">
                     The closest exoplanets are located 4.2 light-years from Earth and orbit Proxima Centauri, the closest star to Earth.
                 </p>
-                <h4 id="ExternalLinks">External links</h4>
+                <h2 id="ExternalLinks">External links</h4>
                 <ul>
                     <li>
                         <a href="https://solarsystem.nasa.gov/planets/overview/">https://solarsystem.nasa.gov/planets/overview/</a>
