--- a/pages/saturn.html
+++ b/pages/saturn.html
@@ -47,10 +47,10 @@
                     </div>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">About</a>
+                    <a class="navlink" href="../about.html">About</a>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">News</a>
+                    <a class="navlink" href="../news.html">News</a>
                 </li>
             </ul>
         </nav>
@@ -363,7 +363,7 @@
                 <p class="paragraph">
                     Proposed missions include a proposed Saturn entry probe and Dragonfly, which will search for life on Titan and Enceladus.
                 </p>
-                <h4 id="ExternalLinks">External links</h4>
+                <h2 id="ExternalLinks">External links</h4>
                 <ul>
                     <li>
                         <a href="https://solarsystem.nasa.gov/planets/saturn/overview/">https://solarsystem.nasa.gov/planets/saturn/overview/</a>
