--- a/pages/tno.html
+++ b/pages/tno.html
@@ -47,10 +47,10 @@
                     </div>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">About</a>
+                    <a class="navlink" href="../about.html">About</a>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">News</a>
+                    <a class="navlink" href="../news.html">News</a>
                 </li>
             </ul>
         </nav>
@@ -181,7 +181,7 @@
                         It is a contact binary composed of two conjoined planetesimals.
                     </p>
                 </div>
-                <h4 id="ExternalLinks">External links</h4>
+                <h2 id="ExternalLinks">External links</h4>
                 <ul>
                     <li>
                         <a href="https://en.wikipedia.org/wiki/Trans-Neptunian_object">https://en.wikipedia.org/wiki/Trans-Neptunian_object</a>
