--- a/pages/venus.html
+++ b/pages/venus.html
@@ -47,10 +47,10 @@
                     </div>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">About</a>
+                    <a class="navlink" href="../about.html">About</a>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">News</a>
+                    <a class="navlink" href="../news.html">News</a>
                 </li>
             </ul>
         </nav>
@@ -270,7 +270,7 @@
                     It is unlikely that life exists on Venus, given the extreme temperatures.
                     However, there is the possibility of microbes to exist thirty miles high in the atmosphere, where temperatures can range between 30 and 70 °C.
                 </p>
-                <h4 id="ExternalLinks">External links</h4>
+                <h2 id="ExternalLinks">External links</h4>
                 <ul>
                     <li>
                         <a href="https://solarsystem.nasa.gov/planets/venus/overview/">https://solarsystem.nasa.gov/planets/venus/overview/</a>
