--- a/pages/asteroid-belt.html
+++ b/pages/asteroid-belt.html
@@ -47,10 +47,10 @@
                     </div>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">About</a>
+                    <a class="navlink" href="../about.html">About</a>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">News</a>
+                    <a class="navlink" href="../news.html">News</a>
                 </li>
             </ul>
         </nav>
@@ -172,7 +172,7 @@
                     </p>
                 </div>
                 <h3 class="paragraphsubheader"></h3>
-                <h4 id="ExternalLinks">External links</h4>
+                <h2 id="ExternalLinks">External links</h4>
                 <ul>
                     <li>
                         <a href="https://en.wikipedia.org/wiki/Asteroid_belt">https://en.wikipedia.org/wiki/Asteroid_belt</a>
