--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -47,10 +47,10 @@
                     </div>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">About</a>
+                    <a class="navlink" href="../about.html">About</a>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">News</a>
+                    <a class="navlink" href="../news.html">News</a>
                 </li>
             </ul>
         </nav>
@@ -313,7 +313,7 @@
                         90 Antiope is a binary system, where the two bodies are of similar sizes.
                     </p>
                 </div>
-                <h4 id="ExternalLinks">External links</h4>
+                <h2 id="ExternalLinks">External links</h4>
                 <ul>
                     <li>
                         <a href="https://en.wikipedia.org/wiki/Natural_satellite">https://en.wikipedia.org/wiki/Natural_satellite</a>
