--- a/pages/uranus.html
+++ b/pages/uranus.html
@@ -47,10 +47,10 @@
                     </div>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">About</a>
+                    <a class="navlink" href="../about.html">About</a>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">News</a>
+                    <a class="navlink" href="../news.html">News</a>
                 </li>
             </ul>
         </nav>
@@ -238,7 +238,7 @@
                     A number of missions to Uranus have been proposed.
                     Such propositions include several missions by ESA (MUSE, ODINUS and Uranus Pathfinder), NASA (Oceanus and NASA Uranus orbiter and probe) and CNSA (Tianwen-4)
                 </p>
-                <h4 id="ExternalLinks">External links</h4>
+                <h2 id="ExternalLinks">External links</h4>
                 <ul>
                     <li>
                         <a href="https://solarsystem.nasa.gov/planets/uranus/overview/">https://solarsystem.nasa.gov/planets/uranus/overview/</a>
